blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <description>The work of getting a new subscription live. Owned by customer success, separate from the sales deal.</description>
    <label>Onboarding</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>