blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Onboarding__c/fields/Go_live_date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_date__c</fullName>
    <description>The date the customer first uses the product in production.</description>
    <label>Go-live date</label>
    <type>Date</type>
</CustomField>