blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Onboarding__c/fields/Kickoff_date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_date__c</fullName>
    <description>The date of the kickoff call.</description>
    <label>Kickoff date</label>
    <type>Date</type>
</CustomField>