blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Onboarding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where onboarding stands.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Kickoff booked</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>