blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Onboarding__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the work of getting each subscription live.</description>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>