blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Onboarding__c/listViews/Onboarding_in_flight.listView-meta.xml
<ListView>
    <fullName>Onboarding_in_flight</fullName>
    <columns>NAME</columns>
    <columns>Kickoff_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Live</value>
    </filters>
    <label>Onboarding in flight</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>